--- a/drone-ci/drone.yml
+++ b/drone-ci/drone.yml
@@ -8,7 +8,7 @@ steps:
   image: docker:dind
   volumes:
   - name: dockersock
-    path: /var/run/docker.sock
+    path: /var/run/
   environment:
     DOCKER_USER:
       from_secret: DOCKER_USER
@@ -26,7 +26,7 @@ services:
   privileged: true
   volumes:
   - name: dockersock
-    path: /var/run/docker.sock
+    path: /var/run/
 
 volumes:
 - name: dockersock
